--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hamburgers": "^1.0.0",
     "react-icons": "^3.11.0",
+    "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
+    "react-router-modal": "^1.5.2",
     "react-scripts": "4.0.0",
     "react-toastify": "^6.1.0",
     "validator": "^13.1.17",
